--- a/views/contacts.pug
+++ b/views/contacts.pug
@@ -11,5 +11,5 @@
 //-         .cards 
 //-             each contact in data
 //-                 .card 
-//-                     h2.card__name #{contact.properties.firstname}  #{contact.properties.lastname}
+//-                     h2.card__name #{contact.properties.dog-breed}  #{contact.properties.dog-breeds]
 //-                     p.card__email #{contact.properties.email}
